--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <button id="dev-tools-reset-btn">Reset</button>
     </div>
     <a-scene
+      frame-updater
       vr-mode-ui="enabled: false;"
       renderer="logarithmicDepthBuffer: true; precision: mediump; antialias: false;"
       embedded
