--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
           <li id="notice-fps-display">FPS: -</li>
         </ul>
       </div>
+      <div id="notice-board-camera" class="notice-board-div">
+        <button id="notice-board-camera-show-hide-btn" class="show-hide-btn">
+          Camera
+        </button>
+        <ul class="notice-board" data-show-status="showing">
+          <li id="notice-camera-position">Pos: -</li>
+          <li id="notice-camera-rotation">Rot: -</li>
+          <li id="notice-camera-scale">Scl: -</li>
+        </ul>
+      </div>
       <div id="notice-board-marker" class="notice-board-div">
         <button id="notice-board-marker-show-hide-btn" class="show-hide-btn">
           Marker
@@ -46,6 +56,7 @@
       embedded
       arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; cameraParametersUrl: https://raw.githack.com/AR-js-org/AR.js/master/data/data/camera_para.dat;"
     >
+      <a-entity id="camera" camera></a-entity>
       <a-marker id="marker" preset="hiro">
         <a-box
           id="obj"
@@ -82,6 +93,14 @@
     // Misc Display
     const noticeFpsDisplay = document.querySelector("#notice-fps-display");
     const noticeFoundMarker = document.querySelector("#notice-marker-found");
+    // Camera Display
+    const noticeCameraPosition = document.querySelector(
+      "#notice-camera-position"
+    );
+    const noticeCameraRotation = document.querySelector(
+      "#notice-camera-rotation"
+    );
+    const noticeCameraScale = document.querySelector("#notice-camera-scale");
     // Marker Display
     const noticeMarkerPosition = document.querySelector(
       "#notice-marker-position"
@@ -138,42 +157,51 @@
 
     function updateMarkerData() {
       if (!markerFound) return;
-      // Marker Changes:
-      (() => {
-        const { position, rotation, scale } = marker.object3D;
-        // Position
-        noticeMarkerPosition.textContent = `Pos: {x: ${position.x.toFixed(
-          2
-        )}, y: ${position.y.toFixed(2)}, z: ${position.z.toFixed(2)}}`;
-        // Rotation
-        const rotX = ((rotation.x * 180) / Math.PI).toFixed(1);
-        const rotY = ((rotation.y * 180) / Math.PI).toFixed(1);
-        const rotZ = ((rotation.z * 180) / Math.PI).toFixed(1);
-        noticeMarkerRotation.textContent = `Rot: {x: ${rotX}°, y: ${rotY}°, z: ${rotZ}°}`;
-        // Scale
-        noticeMarkerScale.textContent = `Scl: {x: ${scale.x.toFixed(
-          2
-        )}, y: ${scale.y.toFixed(2)}, z: ${scale.z.toFixed(2)}}`;
-      })();
-      // Obj Changes:
-      (() => {
-        const { position, rotation, scale } = obj.object3D;
-        // Position
-        noticeObjPosition.textContent = `Pos: {x: ${position.x.toFixed(
-          2
-        )}, y: ${position.y.toFixed(2)}, z: ${position.z.toFixed(2)}}`;
-        // Rotation
-        const rotX = ((rotation.x * 180) / Math.PI).toFixed(1);
-        const rotY = ((rotation.y * 180) / Math.PI).toFixed(1);
-        const rotZ = ((rotation.z * 180) / Math.PI).toFixed(1);
-        noticeObjRotation.textContent = `Rot: {x: ${rotX}°, y: ${rotY}°, z: ${rotZ}°}`;
-        // Scale
-        noticeObjScale.textContent = `Scl: {x: ${scale.x.toFixed(
-          2
-        )}, y: ${scale.y.toFixed(2)}, z: ${scale.z.toFixed(2)}}`;
-      })();
+      const { position, rotation, scale } = marker.object3D;
+      // Position
+      noticeMarkerPosition.textContent = `Pos: {x: ${position.x.toFixed(
+        2
+      )}, y: ${position.y.toFixed(2)}, z: ${position.z.toFixed(2)}}`;
+      // Rotation
+      const rotX = ((rotation.x * 180) / Math.PI).toFixed(1);
+      const rotY = ((rotation.y * 180) / Math.PI).toFixed(1);
+      const rotZ = ((rotation.z * 180) / Math.PI).toFixed(1);
+      noticeMarkerRotation.textContent = `Rot: {x: ${rotX}°, y: ${rotY}°, z: ${rotZ}°}`;
+      // Scale
+      noticeMarkerScale.textContent = `Scl: {x: ${scale.x.toFixed(
+        2
+      )}, y: ${scale.y.toFixed(2)}, z: ${scale.z.toFixed(2)}}`;
     }
-
+    function updateObjData() {
+      if (!markerFound) return;
+      const { position, rotation, scale } = obj.object3D;
+      // Position
+      noticeObjPosition.textContent = `Pos: {x: ${position.x.toFixed(
+        2
+      )}, y: ${position.y.toFixed(2)}, z: ${position.z.toFixed(2)}}`;
+      // Rotation
+      const rotX = ((rotation.x * 180) / Math.PI).toFixed(1);
+      const rotY = ((rotation.y * 180) / Math.PI).toFixed(1);
+      const rotZ = ((rotation.z * 180) / Math.PI).toFixed(1);
+      noticeObjRotation.textContent = `Rot: {x: ${rotX}°, y: ${rotY}°, z: ${rotZ}°}`;
+      // Scale
+      noticeObjScale.textContent = `Scl: {x: ${scale.x.toFixed(
+        2
+      )}, y: ${scale.y.toFixed(2)}, z: ${scale.z.toFixed(2)}}`;
+    }
+    function updateCameraData() {
+      const { position, rotation, scale } = camera.object3D;
+      noticeCameraPosition.textContent = `Pos: {x: ${position.x.toFixed(
+        2
+      )}, y: ${position.y.toFixed(2)}, z: ${position.z.toFixed(2)}}`;
+      const rotX = ((rotation.x * 180) / Math.PI).toFixed(1);
+      const rotY = ((rotation.y * 180) / Math.PI).toFixed(1);
+      const rotZ = ((rotation.z * 180) / Math.PI).toFixed(1);
+      noticeCameraRotation = `Rot: {x: ${rotX}°, y: ${rotY}°, z: ${rotZ}°}`;
+      noticeCameraScale = `Scl: {x: ${scale.x.toFixed(2)}, y: ${scale.y.toFixed(
+        2
+      )}, z: ${scale.z.toFixed(2)}}`;
+    }
     // Create and Register Per Frame Updates
     AFRAME.registerComponent("frame-updater", {
       init: function () {
@@ -193,7 +221,9 @@
         }
         if (markerFound) {
           updateMarkerData();
+          updateObjData();
         }
+        updateCameraData();
       },
     });
   </script>
