--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
       embedded
       arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; cameraParametersUrl: https://raw.githack.com/AR-js-org/AR.js/master/data/data/camera_para.dat;"
     >
+      <a-entity
+        id="camera"
+        camera
+        position
+        wasd-controls
+        rotation
+        look-controls
+        aframe-injected
+      ></a-entity>
       <a-marker id="marker" preset="hiro">
         <a-box
           id="obj"
