--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       embedded
       arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; cameraParametersUrl: https://raw.githack.com/AR-js-org/AR.js/master/data/data/camera_para.dat;"
     >
-      <a-entity
+      <!-- <a-entity
         id="camera"
         camera
         position
@@ -64,7 +64,7 @@
         rotation
         look-controls
         aframe-injected
-      ></a-entity>
+      ></a-entity> -->
       <a-marker id="marker" preset="hiro">
         <a-box
           id="obj"
