--- a/index.html
+++ b/index.html
@@ -56,15 +56,6 @@
       embedded
       arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3; cameraParametersUrl: https://raw.githack.com/AR-js-org/AR.js/master/data/data/camera_para.dat;"
     >
-      <!-- <a-entity
-        id="camera"
-        camera
-        position
-        wasd-controls
-        rotation
-        look-controls
-        aframe-injected
-      ></a-entity> -->
       <a-marker id="marker" preset="hiro">
         <a-box
           id="obj"
@@ -80,6 +71,8 @@
     const scene = document.querySelector("#scene");
     scene.addEventListener("loaded", () => {
       let markerFound = false;
+
+      const camera = document.querySelector("a-entity[camera]");
       const marker = document.querySelector("#marker");
       const obj = document.querySelector("#obj");
 
