--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
             updateMarkerData();
             updateObjData();
           }
-          // updateCameraData();
+          updateCameraData();
         },
       });
     });
