--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
       <a-entity
         camera
         position
-        wasd-controls
+        wasd-controls="enabled:false"
         rotation
-        look-controls
+        look-controls="enabled:false"
         aframe-injected
       ></a-entity>
       <a-entity light data-aframe-default-light aframe-injected></a-entity>
@@ -165,6 +165,8 @@
       updateMarkerData();
       noticeFoundMarker.textContent = "Marker Found";
       noticeFoundMarker.setAttribute("data-status", "good");
+      s;
+      // camera.object3D.rotation.set(0, 0, 0)
       markerFound = true;
     });
     marker.addEventListener("markerLost", () => {
