--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
           color="#FF0000"
         ></a-box>
       </a-marker>
+
       <a-entity
         camera
         position
@@ -72,7 +73,17 @@
         rotation
         look-controls="enabled:false"
         aframe-injected
-      ></a-entity>
+      >
+        <a-box
+          id="overlay-box"
+          position="2.5 0 -5"
+          rotation="0 0 0"
+          scale="0.5 0.5 0.5"
+          color="#00FFFF"
+          visible="true"
+          animation="property: rotation; to: 360 720 360; loop: true; dur: 5000"
+        ></a-box>
+      </a-entity>
       <a-entity light data-aframe-default-light aframe-injected></a-entity>
       <a-entity
         light
@@ -83,6 +94,8 @@
     </a-scene>
   </body>
   <script>
+    const twoPi = Math.PI * 2;
+
     let markerFound = false;
 
     const scene = document.querySelector("a-scene");
@@ -192,9 +205,14 @@
     function updateObjData() {
       if (!markerFound) return;
       const { position, rotation, scale } = obj.object3D;
+
       rotation.x += 0.0375;
       rotation.y += 0.005;
       rotation.z += 0.065;
+
+      rotation.x %= twoPi;
+      rotation.y %= twoPi;
+      rotation.z %= twoPi;
 
       // Position
       noticeObjPosition.textContent = `Pos: {x: ${position.x.toFixed(
