--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <a-nft
         type="nft"
         id="marker"
-        url="./citymorphbanner/citymorphbanner"
+        url="/web-ar-static-test/citymorphbanner/citymorphbanner"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
