--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         ></a-box>
       </a-nft>
 
-      <a-entity
+      <!-- <a-entity
         camera
         position
         wasd-controls="enabled:false"
@@ -102,7 +102,7 @@
         position
         data-aframe-default-light
         aframe-injected
-      ></a-entity>
+      ></a-entity> -->
     </a-scene>
   </body>
   <script>
