--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       >
         <a-box
           id="obj"
-          position="0 0 0"
+          position="0 .25 0"
           rotation="15 15 15"
           scale=".5 .5 .5"
           color="#FF0000"
