--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
   </head>
   <!-- A-Frame core -->
   <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
-  <!-- AR.js for A-Frame (enables the `arjs` attribute, markers, etc.) -->
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-  <!-- HLS JS (enables video streaming) -->
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+
+  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.4/aframe/build/aframe-ar-nft.js"></script>
 
   <body>
     <div id="dev-tools" data-show-status="showing">
