--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
   </head>
   <!-- A-Frame core -->
   <script src="https://aframe.io/releases/1.7.0/aframe.min.js"></script>
-
-  <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/3.4.4/aframe/build/aframe-ar-nft.js"></script>
+  <!-- AR.js for A-Frame (enables the `arjs` attribute, markers, etc.) -->
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+  <!-- HLS JS (enables video streaming) -->
+  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
   <body>
     <div id="dev-tools" data-show-status="showing">
@@ -62,7 +63,7 @@
       <a-nft
         type="nft"
         id="marker"
-        url="/web-ar-static-test/citymorphbanner/citymorphbanner"
+        url="/web-ar-static-test/pinball/pinball"
         smooth="true"
         smoothCount="10"
         smoothTolerance=".01"
@@ -73,7 +74,8 @@
           position="0 .25 0"
           rotation="15 15 15"
           scale=".5 .5 .5"
-          color="#FF0000"
+          material="shader: flat; color: #FF0000"
+          visible="true"
         ></a-box>
       </a-nft>
 
